--- a/lib/templates/index.eex
+++ b/lib/templates/index.eex
@@ -1,7 +1,7 @@
- <<h1>All bears!</h1>
+ <h1>All bears!</h1>
 
  <ul>
   <%= for bear <- bears do %>
     <li><%= bear.name %> - <%= bear.type %></li>
-  <%= end %>
+  <% end %>
  </ul>
